--- a/VersionFinal2.0/reciber_summary.html
+++ b/VersionFinal2.0/reciber_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>reciber Project Status (09/03/2015 - 19:16:16)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>reciber Project Status (09/03/2015 - 19:16:46)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>VersionFinal2.0.xise</TD>
@@ -13,7 +13,7 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>reciber</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Synthesized</TD>
+<TD>Placed and Routed</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -76,5 +76,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 09/03/2015 - 19:16:16</center>
+<br><center><b>Date Generated:</b> 09/03/2015 - 19:16:46</center>
 </BODY></HTML>
